--- a/loopback/templates/loopback-template.xml
+++ b/loopback/templates/loopback-template.xml
@@ -6,6 +6,7 @@
 				<interface xmlns="urn:ios">
 					<Loopback>
 						<name>{/id}</name>
+						<description>{/descrition}</description>
 						<ip>
 							<address>
 								<primary>
@@ -19,6 +20,7 @@
 				<interface xmlns="http://tail-f.com/ned/cisco-ios-xr">
 					<Loopback>
 						<id>{/id}</id>
+						<description>{/descrition}</description>
 						<ipv4>
 							<address>
 								<ip>{/ip}</ip>
