--- a/GCSE/templates/GCSE-template.xml
+++ b/GCSE/templates/GCSE-template.xml
@@ -43,7 +43,7 @@
   						</ip>
   					</GigabitEthernet>
   				</interface>
-        <?ifend?>
+        <?end?>
 			</config>
 		</device>
 	</devices>
