--- a/lab/templates/lab-template.xml
+++ b/lab/templates/lab-template.xml
@@ -2,19 +2,11 @@
                  servicepoint="lab">
   <devices xmlns="http://tail-f.com/ns/ncs">
     <device>
-      <!--
-          Select the devices from some data structure in the service
-          model. In this skeleton the devices are specified in a leaf-list.
-          Select all devices in that leaf-list:
-      -->
       <name>{/device}</name>
       <config>
-        <!--
-            Add device-specific parameters here.
-            In this skeleton the service has a leaf "dummy"; use that
-            to set something on the device e.g.:
-            <ip-address-on-device>{/dummy}</ip-address-on-device>
-        -->
+      <? if string-compare(/device, /hostname_old)?>
+        <hostname xmlns="urn:ios">{/hostname_new}</hostname>
+      <?end?>
       </config>
     </device>
   </devices>
