--- a/lab/templates/lab-template.xml
+++ b/lab/templates/lab-template.xml
@@ -4,7 +4,7 @@
     <device>
       <name>{/device}</name>
       <config>
-      <?if {/device = 'CSR1'}?>
+      <?if {/device = /hostname_old}?>
         <hostname xmlns="urn:ios">{/hostname_new}</hostname>
       <?end?>
       </config>
