--- a/GCSE/templates/GCSE-template.xml
+++ b/GCSE/templates/GCSE-template.xml
@@ -16,11 +16,9 @@
 									</encapsulation>
 									<ipv4>
 										<address>
-											<?for {/GCSE/service-information/service-options/ip-settings/ip/network/hosts}?>
-												<?if {/device = /GCSE/service-information/service-options/ip-settings/ip/network/hosts/node}?>
-													<ip>{/GCSE/service-information/service-options/ip-settings/ip/network/hosts/address}</ip>
-													<mask>{/GCSE/service-information/service-options/ip-settings/ip/network/hosts/subnet-mask}</mask>
-												<?end?>
+											<?for {/device = /GCSE/service-information/service-options/ip-settings/ip/network/hosts/node}?>
+												<ip>{/GCSE/service-information/service-options/ip-settings/ip/network/hosts/address}</ip>
+												<mask>{/GCSE/service-information/service-options/ip-settings/ip/network/hosts/subnet-mask}</mask>
 											<?end?>
 										</address>
 									</ipv4>
